@@ -22,7 +22,7 @@ public class Window extends Application {
 			scene.getStylesheets().add(getClass().getResource("application.css").toExternalForm());
 		    
 			primaryStage.setScene(scene);
-			primaryStage.setFullScreen(true);
+			primaryStage.setFullScreen(false);
 			primaryStage.setResizable(false);
 			primaryStage.show();
 		} catch(Exception e) {
@@ -34,7 +34,7 @@ public class Window extends Application {
 	}
 	
 	public static void main(String[] args) {
-		//--module-path C:\Users\lucpr\Downloads\openjfx-20_windows-x64_bin-sdk\javafx-sdk-20\lib --add-modules=javafx.controls,javafx.fxml
+
 		launch(args);
 	}
 	
